deployment-solution/manifests/deployment-solution.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <solution-repo>
  labels:
    app: <solution-repo>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: <solution-repo>
  template:
    metadata:
      labels:
        app: <solution-repo>
    spec:
      containers:
        - name: <solution-repo>
          image: aicollaboration/<solution-repo>:<VERSION>
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "2048Mi"
              cpu: "500m"
      restartPolicy: Always
