deployment-solution/manifests/service-solution.yml
apiVersion: v1
kind: Service
metadata:
  name: solution
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: solution
