deployment-solution/manifests/api-ingress-solution.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: solution
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - aiproduct.io
    secretName: tls-latest-aiproduct.io
  rules:
  - host: solution.aiproduct.io
    http:
      paths:
      - path: /
        backend:
          serviceName: <solution-repo>
          servicePort: 80
